Adicionando um item que faltanda para o que o garoa nao é

--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@ serem trabalhados
 7.2. O garoaQA não é:
 
 - limitado a testadores
+- um evento com fins lucrativos
 - um encontro composto por palestras ou workshops
 - um encontro para marketing ou propaganda
 - um encontro para imposição de conceitos
