--- a/index.html
+++ b/index.html
@@ -128,6 +128,12 @@ serem trabalhados
 - Everton James
 - Antônio Montanha
 - Fabiana Rodrigues
+- Camila Mlaker
+
+8.2.1.1. Barueri 
+
+- Jonathan Santos 
+- Vitor Ponce
 
 8.2.2. Santa Catarina
 
@@ -144,6 +150,11 @@ serem trabalhados
 
 - Silas Marques
 - Katiana Maia
+
+8.2.5. Bahia
+
+- Tiago Pereira 
+- Jonas Barbosa
 
 9. Contatos
 
